# DiscreteWorld

./: .gitignore  README.md
combinatorics/: combinatorics.hpp  combinatorics.ixx  counting.hpp  test.cpp
counting/: counting.hpp  counting.ixx
discreets/: Procedural_generation_source.py
discreets/Procedural_generation/c++/g++/: planets.hpp  planets_generator.cpp
discreets/Procedural_generation/c++/msvc/: planet.ixx  planets_generator.cpp
discreets/Procedural_generation/python/: Draw_Planets.py  Planets.py  discreet_text_examples.py
discreets/Procedural_generation/python/c++bindings/: CMakeLists.txt  Instructions_to_build_the_module.txt  planetbind.cpp
discreets/c++/g++/: planets.hpp  planets_generator.cpp
discreets/c++/msvc/: planet.ixx  planets_generator.cpp
